发布黑名单稳定第一版

--- a/changelog.txt
+++ b/changelog.txt
@@ -11,11 +11,11 @@
   - 3.暂不支持后台音乐，请去掉黑名单或加入白名单，或悬挂小窗。
   - 4.息屏时刻在前台的应用，息屏后也一直属于前台，不会冻结。
   - 3.后台应用无响应问题，请暂时使用 NoANR，配套APP正在开发。
-- 2022-06-16 更新内容：
+- 2022-06-18 更新内容：
   - 1.初版工程，全是更新内容
   - 2.内测版本，将于 2022-07-01 00:00:00 过期。
 - 未来计划 (画大饼🤩(不是)，掉头发🥵(才是))：
-  - 1.计划取缔busybox，去除通信开销。
-  - 2.计划新增应用杀不死功能，建议开启Zram,JVM层App的内存都能压缩很多，说明它们光吃内存不干正事，Zram压缩后可大大提升后台留存能力。
-  - 3.计划研究Freamwork，ActivityManager等等，Hook诸如onResume之类，告诉应用，你不曾离开过， 我也没走。
+  - 1.计划研究Native、Freamwork，ActivityManager等底层，重塑Activity生命周期。
+  - 2.配套APP已经在做了，别催。
+  - 3.计划新增应用杀不死功能，建议别关ZRAM。
 
