--- a/changelog.txt
+++ b/changelog.txt
@@ -87,7 +87,7 @@
   - 5.后台应用无响应问题，请暂时使用[ 酷安@myflavor ] 的NoANR，
       因为[ 冻它APP ]正在开发, NoANR2.3.apk 已包含在本模块包里，
       有需要请手动安装并到 LSPosed 里开启它勾选系统框架，然后重启。
-  - 6.等你来发现。
+  - 6.微信暂时只开放推送进程，后台语音/视频暂未支持，请手动添加白名单。
 
 
 - 别看，没有运行日志了，看看此文件的更新时间判断模块启动了没。
