Ver1.6.3:1.恢复日志文件记录。2.尝试修复运行一段时间就挂掉的BUG，未完全验证。3.尝试将第三方应用(无论是否白名单)提权到系统应用运行级别，尽量避免被杀，未完全验证。

--- a/changelog.txt
+++ b/changelog.txt
@@ -21,9 +21,12 @@
       时间内无法及时发现所有BUG, 运行越久越容易触发未知BUG,不想留
       给后来人承受，模块会在到测试到期前发布新版，敬请留意，适配了
       Magisk的模块更新机制，能上GitHub就可以在里面更新。
-  - 11.冻它模块官方平台：
+  - 11.本人机型为红米K50Pro, MIUI13.0.18稳定版，从开发到测试完全
+      基于此机型，故模块兼容依次从: 该机型-> MIUI13(MTK) -> MIUI
+      -> 其他平台 依次递减，亲缘性越远兼容越差，测试平台有限，望谅解。
+  - 12.冻它模块官方平台：
 
-      A: Q群交流吹水 781222669
+      A: Q群吹水 781222669 (冻它模块freezeit测试交流群)[https://jq.qq.com/?_wv=1027&k=JY3DBDap]
 
       B: (TG交流吹水)[https://t.me/freezeitModule]
 
@@ -33,12 +36,12 @@
 
 - 画小饼(一定会做，但不知道什么时候做和做完🕊️)：
   - 1.配套APP正在开发。
-  - 2.将新增应用杀不死功能，建议别关ZRAM。
+  - 2.将新增应用杀不死功能，建议别关ZRAM。(已完成，未验证)
   - 3.将不再开放接入HMS推送QQ的后台。
   - 4.将针对已接入系统推送而收到消息的APP开放临时后台(优先适配MIpush)，
       点击消息可拉起应用。
   - 5.将优化微信，支付宝拉起支付服务。
-  - 6.将优化兼容系统[ 暂停执行已缓存的应用 ]服务。
+  - 6.将优化兼容系统[ 暂停执行已缓存的应用 ]服务。(目前暂无反馈有冲突情况)
   - 7.将智能识别开放有后台音频播放，下载服务的应用，停止播放和下载完成
       将进入超时列队，超时后暂停。
   - 8.将对 surfaceflinger 进程拦截注入同步获取前台任务，放弃定时轮询，
@@ -60,6 +63,11 @@
       Repositories，届时我要是没有消息了，你要是无聊可以多点关键词搜搜各大
       Git平台(用户名随机，仓库名不变)。以上无他，妄想症而已)。
 
+- 更新内容 2022-06-22 Ver1.6.2 -> Ver1.6.3
+  - 1.恢复日志文件记录。
+  - 2.尝试修复运行一段时间就挂掉的BUG，未完全验证。
+  - 3.尝试将第三方应用(无论是否白名单)提权到系统应用运行级别，尽量避免被杀，未完全验证。
+
 - 更新内容 2022-06-22 Ver1.6 -> Ver1.6.2
   - 1.没啥说的，就是刷刷版本号，诶，就是玩。
   - 2.禁用日志文件记录，只会在开机时刻输出本次说明。
@@ -72,11 +80,10 @@
       时被系统授权弹窗干扰而卡死的BUG。
   - 2.修复关闭应用导致的日志无限刷新。
 
-- Ver1.6.2 仍存在的问题：
+- Ver1.6.3 仍存在的问题：
   - 0.模块有意外停止工作可能，被冻结的应用打开后无法解冻进而卡住，
       但不影响推送，请划掉再打开。因为只管理第三方应用，模块挂了
-      也无法影响系统，请放心使用。(判断方式：APP上线前，请开个白
-      名单外的音乐应用播放，切后台，如果10秒后停止，说明模块正常。
+      也无法影响系统，请放心使用。
   - 1.正在播放音视频的应用切后台冻结后，再解冻有概率停止播放而进
       度条依旧在走动，请暂停再播放。
   - 2.息屏时刻在前台的应用，息屏后也一直属于前台，不会冻结，所以
@@ -88,6 +95,8 @@
       因为[ 冻它APP ]正在开发, NoANR2.3.apk 已包含在本模块包里，
       有需要请手动安装并到 LSPosed 里开启它勾选系统框架，然后重启。
   - 6.微信暂时只开放推送进程，后台语音/视频暂未支持，请手动添加白名单。
+  - 7.部分特牛逼应用冻结后仍有后台运行，若遇到请反馈，暂未找到原因，
+      猜测是冻了，然后又被其他应用或服务唤醒了，希望有伙伴帮忙测试
+      切断唤醒看能不能解决，或者找找是被谁唤醒，我一个人任务量太大。
+      (目前已发现：抖音/头条/腾讯视频/美的美居)
 
-
-- 别看，没有运行日志了，看看此文件的更新时间判断模块启动了没。
