Ver1.6.3:1.恢复日志文件记录。2.尝试修复运行一段时间就挂掉的BUG，未完全验证。3.尝试将第三方应用(无论是否白名单)提权到系统应用运行级别，尽量避免被杀，未完全验证。

--- a/changelog.txt
+++ b/changelog.txt
@@ -24,7 +24,10 @@
   - 11.本人机型为红米K50Pro, MIUI13.0.18稳定版，从开发到测试完全
       基于此机型，故模块兼容依次从: 该机型-> MIUI13(MTK) -> MIUI
       -> 其他平台 依次递减，亲缘性越远兼容越差，测试平台有限，望谅解。
-  - 12.冻它模块官方平台：
+  - 12.建议提前做一个全局 dex-oat (Everything模式，一次就行，不用
+      每次开机都做), 提升运行效率，但存储空间会变大很多，用空间换时间，
+      各位自己决定。
+  - 13.冻它模块官方平台：
 
       A: Q群吹水 781222669 (冻它模块freezeit测试交流群)[https://jq.qq.com/?_wv=1027&k=JY3DBDap]
 
@@ -100,3 +103,4 @@
       切断唤醒看能不能解决，或者找找是被谁唤醒，我一个人任务量太大。
       (目前已发现：抖音/头条/腾讯视频/美的美居)
 
+1.恢复日志文件记录。2.尝试修复运行一段时间就挂掉的BUG，未完全验证。3.尝试将第三方应用(无论是否白名单)提权到系统应用运行级别，尽量避免被杀，未完全验证。
