Ver1.6.3:1.恢复日志文件记录。2.尝试修复运行一段时间就挂掉的BUG，未完全验证。3.尝试将第三方应用(无论是否白名单)提权到系统应用运行级别，尽量避免被杀，未完全验证。4.更新日志

--- a/changelog.txt
+++ b/changelog.txt
@@ -98,7 +98,9 @@
       因为[ 冻它APP ]正在开发, NoANR2.3.apk 已包含在本模块包里，
       有需要请手动安装并到 LSPosed 里开启它勾选系统框架，然后重启。
   - 6.微信暂时只开放推送进程，后台语音/视频暂未支持，请手动添加白名单。
-  - 7.部分特牛逼应用冻结后仍有后台运行，若遇到请反馈，暂未找到原因，
+  - 7.微信支付宝支付不能正常拉起，请在支付前一刻回到微信或支付宝至少
+      一秒，然后10秒内回到支付页面支付(抢在微信、支付宝超时冻结前)。
+  - 8.部分特牛逼应用冻结后仍有后台运行，若遇到请反馈，暂未找到原因，
       猜测是冻了，然后又被其他应用或服务唤醒了，希望有伙伴帮忙测试
       切断唤醒看能不能解决，或者找找是被谁唤醒，我一个人任务量太大。
       (目前已发现：抖音/头条/腾讯视频/美的美居)
