--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+- 更新内容 2022-08-15 v2.1.16 -> v2.2
+  - 1.无重大更新，单纯刷刷版本号。
+  - 2.微调lmk参数。
+  - 3.去除限时，本版本可长期使用。(实际本版本过期时间为:2050年)
+  
 - 更新内容 2022-08-10 v2.1.8 -> v2.1.16
   - 1.新增APP设置。
   - 2.新增主页CPU等实时信息。
