--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,16 @@
+- 更新内容 2022-09-20 2.2.5.Dev -> v2.2.8.Dev
+  - 1.调整FreezerV1机制。
+  - 2.处理冻结应用唤醒锁。
+  - 3.新增[定时唤醒]，定时可调，唤醒时长为[超时冻结]的参数。
+  - 4.[定时压制]改为30分钟一次，不可更改，[定时唤醒]已承担部分[定时压制]功能。
+  - 5.已安装的全部输入法强制列入内置白名单。
+  - 6.冻结QQ/TIM时，可选择是否杀死MSF进程。
+
+- 更新内容 2022-09-13 2.2.4.Dev -> v2.2.5.Dev
+  - 1.设置页新增电流校正，修复电流单位，电池功率。
+  - 2.尝试挂载FreezerV2(frozen)。
+  - 3.细节调整(改改错别字啥的)。
+
 - 更新内容 2022-09-10 v2.2 -> v2.2.4.Dev
   - 1.新增Freezer模式(可挂载v1，原生v2需系统支持)。
   - 2.新增开机超时禁用自身功能，开机超过5分钟未进入桌面则禁用自身，并退出。
