--- a/changelog.txt
+++ b/changelog.txt
@@ -1,15 +1,5 @@
-- 更新内容 2022-10-20 2.2.13 -> v2.2.14
-  - 1.修复部分设备设置保存失败。
-  
-- 更新内容 2022-10-18 2.2.12 -> v2.2.13
-  - 1.修复"播放中不冻结"应用在冻结状态无法响应广播导致各种卡住(卡通话/安装等等)。
-  - 2.调整定时解冻功能，若设为最小值10分, 则为关闭定时解冻。
-  - 3.调整部分功能词语描述。
-
-- 更新内容 2022-10-13 2.2.11 -> v2.2.12
-  - 1.完善息屏深度Doze(息屏超时3分钟, 白名单的第三方列表为冻它的自由后台、内置自由应用)。
-  - 2.新增息屏冻结(息屏超时3分钟将冻结前台, 自由后台除外)。
-  - 3.部分功能换成NDK原生API, 优化功耗。
+- 更新内容 2022-10-24 2.2.14 -> v2.2.15
+  - 1.设为冻结的应用在前台时不再屏蔽广播。
 
 - 基本说明( 使用前必读 ): 
   - 1.模块有内置白名单(后台自由, 不冻结), 不可更改, 其他应用可配置五种模式：
@@ -26,6 +16,6 @@
   - 6.底层进程与App通信采用TCP_SOCKET(本地环回[127.0.0.1:60613], 模块为Server, APP为Client), 因此通信范围仅限本机内部, 没有隐私泄漏风险。APP端开源, 但底层C++代码闭源。
   - 7.仅支持第三方应用冻结解冻, 模块不会接管系统应用, 部分系统辅助类应用以第三方应用形式存在(可卸载), 被冻结后会导致系统异常, 请手动设为自由后台, 并及时给作者反馈。
   - 8.模块所需文件大多创建于模块目录内。以下两个特殊例外：
-      A.模块发生异常时, 异常日志会追加到:[ /sdcard/Android/freezeit_crash_log.txt ] 若发现存在异常内容, 请向作者反馈。
-      B.模块会创建一个配置文件供Xposed部分使用, 位于[ /data/system/freezeit/xposed.conf ] 普通用户不用理会这个。
+      A.模块发生异常时, 异常日志会追加到:[ /sdcard/Android/freezeit_crash_log.txt ] 若发现存在异常内容, 请向作者反馈。若运行一切正常, 将不会产生异常。
+      B.模块会创建一个配置文件供Xposed部分使用, 位于[ /data/system/freezeit.conf ] 普通用户不用理会这个。
       注: 以上两个文件在卸载冻它Magisk模块时, 会在重启阶段自动清除。
