--- a/changelog.txt
+++ b/changelog.txt
@@ -1,21 +1,54 @@
+- 更新内容 2022-11-20 2.2.15 -> v2.2.16
+  - 1.尝试修复过度拦截前台应用的广播(该BUG导致面具卡启动、QQ不能切换主题、爱玩机不能获取电池信息等等)。
+
 - 更新内容 2022-10-24 2.2.14 -> v2.2.15
   - 1.设为冻结的应用在前台时不再屏蔽广播。
 
-- 基本说明( 使用前必读 ): 
-  - 1.模块有内置白名单(后台自由, 不冻结), 不可更改, 其他应用可配置五种模式：
-      A.超时则杀死  (该应用进入后台超时就直接杀死, 设置里调整可超时参数)
-      B.Kill-19冻结 (使用 SIGSTOP(19),SIGCONT(18) 信号进行冻结和解冻)
-      C.Freezer冻结 (FreezerV2或V1由设备决定, 具体看日志, V1已解决内存泄漏, 但不是即时生效, 不用刻意关注内存)
-      D.播放中不冻结 (停止播放则优先Freezer冻结, 部分设备不能识别蓝牙播放状态)
-      E.后台自由 (不会冻结该应用, 可在后台自由运行) 
-      注：建议优先使用Freezer, 其次Kill-19(压制效果好, 但更加容易导致应用异常, 闪弹, 重载等等)。
-  - 2.前台应用只支持顶层窗口显示的应用, 包括普通前台, 分屏, MIUI小窗, 多屏, virtualDisplay，不包括前台服务的应用。
-  - 3.悬浮窗暂时不能识别为前台应用, 依旧会冻结(例如Scene的悬浮监视器)。如果是画中画视频悬浮窗, 建议设为自由后台或播放不冻结。
-  - 4.请不要与其他功能类似的[ 墓碑模块 / 墓碑模式 / 黑域 / 各类乖巧模式 ]一同使用, 避免冲突, 暂时与系统自带[ 暂停执行已缓存的应用 ]无冲突。
-  - 5.模块开发测试机型为红米K50Pro(matisee/MIUI13.0.23)、一加6(enchilada/PixelExperientPlus/Android12)。测试平台有限, 望谅解。
-  - 6.底层进程与App通信采用TCP_SOCKET(本地环回[127.0.0.1:60613], 模块为Server, APP为Client), 因此通信范围仅限本机内部, 没有隐私泄漏风险。APP端开源, 但底层C++代码闭源。
-  - 7.仅支持第三方应用冻结解冻, 模块不会接管系统应用, 部分系统辅助类应用以第三方应用形式存在(可卸载), 被冻结后会导致系统异常, 请手动设为自由后台, 并及时给作者反馈。
-  - 8.模块所需文件大多创建于模块目录内。以下两个特殊例外：
-      A.模块发生异常时, 异常日志会追加到:[ /sdcard/Android/freezeit_crash_log.txt ] 若发现存在异常内容, 请向作者反馈。若运行一切正常, 将不会产生异常。
-      B.模块会创建一个配置文件供Xposed部分使用, 位于[ /data/system/freezeit.conf ] 普通用户不用理会这个。
-      注: 以上两个文件在卸载冻它Magisk模块时, 会在重启阶段自动清除。
+- 更新内容 2022-10-20 2.2.13 -> v2.2.14
+  - 1.修复部分设备设置保存失败。
+  
+- 更新内容 2022-10-18 2.2.12 -> v2.2.13
+  - 1.修复"播放中不冻结"应用在冻结状态无法响应广播导致各种卡住(卡通话/安装等等)。
+  - 2.调整定时解冻功能，若设为最小值10分, 则为关闭定时解冻。
+  - 3.调整部分功能词语描述。
+
+- 更新内容 2022-10-13 2.2.11 -> v2.2.12
+  - 1.完善息屏深度Doze(息屏超时3分钟, 白名单的第三方列表为冻它的自由后台、内置自由应用)。
+  - 2.新增息屏冻结(息屏超时3分钟将冻结前台, 自由后台除外)。
+  - 3.部分功能换成NDK原生API, 优化功耗。
+
+- 更新内容 2022-10-02 2.2.10 -> v2.2.11
+  - 1.修复一处可能导致FreezerV1泄漏的地方。
+  - 2.修复FreezerV2识别错误。
+  - 2.新增检查进程wchan状态, 可检查进程已否已经冻结。
+
+- 更新内容 2022-10-01 2.2.8.Dev -> v2.2.10
+  - 1.微调UI, 新增图示说明。
+  - 2.新增应用CPU使用时间。
+  - 3.优化底层代码效率，新增更多工作异常输出日志。
+  - 4.删除开机超时自闭机制, 请常备救砖模块防止模块冲突。
+  - 5.调整唤醒锁：黑名单应用无法获得唤醒锁，动态应用冻结时忽略其唤醒锁功能。
+  - 6.尝试解决socket:accept()异常(待验证)。
+
+- 更新内容 2022-09-20 2.2.5.Dev -> v2.2.8.Dev
+  - 1.调整FreezerV1机制。
+  - 2.处理冻结应用唤醒锁。
+  - 3.新增[定时唤醒]，定时可调，唤醒时长为[超时冻结]的参数。
+  - 4.[定时压制]改为30分钟一次，不可更改，[定时唤醒]已承担部分[定时压制]功能。
+  - 5.已安装的全部输入法强制列入内置白名单。
+  - 6.冻结QQ/TIM时，可选择是否杀死MSF进程。
+
+- 更新内容 2022-09-13 2.2.4.Dev -> v2.2.5.Dev
+  - 1.设置页新增电流校正，修复电流单位，电池功率。
+  - 2.尝试挂载FreezerV2(frozen)。
+  - 3.细节调整(改改错别字啥的)。
+
+- 更新内容 2022-09-10 v2.2 -> v2.2.4.Dev
+  - 1.新增Freezer模式(可挂载v1，原生v2需系统支持)。
+  - 2.新增开机超时禁用自身功能，开机超过5分钟未进入桌面则禁用自身，并退出。
+  - 3.新增冻结模式反转按钮，一键反转Freezer和kill模式。操作不再立即生效，需点击右下角保存。
+  - 4.移除lmk设置参数。
+  - 5.移除底层调整oom功能。
+  - 6.APP电流显示微调。
+  - 7.开机后30秒时会执行一次定时压制。
+  - 8.根据反馈日志改进了很多，但很多反馈BUG在我本机(红米K50Pro, MIUI13.0.23稳定版)难以复现，所以BUG修复情况未知。
