--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,21 @@
+### v2.3.6 更新日志 2022-12-06
+- 尝试修复 Android 10-11 死机重启。
+- 更换冻它APP包名。
+
+### v2.3.4 更新日志 2022-12-04
+- 尝试修复前台状态识别。
+- 移除 [/dev/cg2_bpf] 路径的FreezerV2。
+
+### v2.3.2 更新日志 2022-12-03
+- 优化进Doze逻辑。
+- 调整绑定核心顺序。
+
+### v2.3.1 更新日志 2022-12-02
+- 更新前/后台策略(详情请看教程)。
+- 去除播放中不冻结，采用兼容性更强的宽松后台。
+- 去除音频识别功能。
+- 定时解冻最小时间改到3分钟。
+
 ### v2.2.18Fix 更新日志 2022-11-28
 - 移除挂载FreezerV2。
 
