--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,10 @@
-### v2.4.0 更新日志 2023-01-10
+### v2.4.1 更新日志 2023-01-10
 - 重构底层。
 - 调整APP UI。
 - 支持X64平台。
 - 支持KernelSU。
 - 完善冻它APP英文UI。
+- 修复2.4.0不保存配置问题。
 - 修复息屏播放会进入Doze。
 - 修复部分应用前台状态识别异常。
 - 修复部分CPU温度读取异常。
