--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,13 @@
+### v2.4.3 更新日志 2023-01-17
+- APP[设置页]的跳转链接拆分到[关于页]。
+- APP[配置列表]调整为优先按配置排列，其次按宽松严格排列。
+- XPosed调整ANR处理(应该可以大幅度减少ANR杀进程)。
+- XPosed调整广播处理，避免与红魔自带墓碑的广播处理机制冲突。
+- 调整内置自由名单。
+- Doze期间不再记录电池变化。
+- 修复小概率日志出现[数据格式异常]。
+- 修复[杀死后台]日志显示为[冻结]的问题。
+
 ### v2.4.1 更新日志 2023-01-10
 - 重构底层。
 - 调整APP UI。
