--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+### v2.5.0 更新日志 2023-02-13
+- 新增系统应用冻结。
+- 修复2.4.7 APP闪退。
+- 优化APP体积。
+
 ### v2.4.7 更新日志 2023-02-08
 - 修复内存数值异常。
 - 修复超大分辨率(8K)下CPU曲线图绘制错误。
