--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+### v2.5.2 更新日志 2023-02-22
+- 调整FreezerV1机制：取消V1(UID)，原有配置换成V1(FROZEN)，原V1(FROZEN)改为V1(FROZEN+SIGSTOP)双重冻结。
+
 ### v2.5.1 更新日志 2023-02-18
 - 优化 APP UI 在横屏或平板显示效果。
 - 优化 APK 体积。
