--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,6 @@
-### v2.6.6 更新日志 2023-06-26
-- 移除核心绑定。
-- LMK调整改为默认关闭。
-- Freezer自动选择已排除V1,可手动选择。
-- 新增应用冻结断网。
-- 恢复纯白默认壁纸。
-- 选取壁纸时将居中裁剪，不再整体拉伸。
+### v3.0.0 更新日志 2023-12-04
+1. 兼容安卓14，仅支持 安卓12 或以上，且内核版本 5.10 或以上。
+2. 相对于freezer，该版本使用 全局SIGSTOP 模式下，应用解冻时出现异常的情况会少些(作者个人感受)。
+3. 目前冻它已停更，这是最后一版更新。
+4. 项目开源地址：https://github.com/jark006/freezeitVS
+5. 管理器开源地址：https://github.com/jark006/freezeitapp
